# electronics_shop

./: .gitignore  README  main.py  pyproject.toml  test_Item.py
src/: main.py
tests/: test_Item.py  test_item.py  test_phone.py
